Xamarin and Jira text are now replaced logos only when the viewport becomes too small. Logo positioning refined further. Known issue: Animations occur at a certain scroll point. If the height of the browser is too small, the animation won't be seen. Consider using a scroll height based on the current viewable area instead of a set height cut-off.

--- a/css/less/style.less
+++ b/css/less/style.less
@@ -275,7 +275,7 @@ header {
 }
 
 #jiraLogo {
-   top: 600px;
+   top: 607px;
    left: -8000px;
    opacity: 0;
    width: 126px;
@@ -285,9 +285,9 @@ header {
    -moz-transition: left .5s ease, opacity .5s linear;
    -o-transition: left .5s ease, opacity .5s linear;
    transition: left .5s ease, opacity .5s linear;
-
+   margin-left: -63px;
    &.reveal {
-      left: 7%;
+      left: 11%;
       opacity: 1;
    }
 }
@@ -550,6 +550,28 @@ header {
             }
          }
       }
+   }
+}
+
+/////////////// Tech Logo Adjustments (i.e. Remove logo text when the screen is too small).
+@media (max-width : 1393px) {
+   #xamarinLogo
+   {
+      background: url("../images/tech/xamarin-tiny.png") no-repeat;
+      width: 86px;
+      height: 76px;
+      margin-left: -43px;
+   }
+}
+
+@media (max-width : 1008px) {
+   #jiraLogo
+   {
+      background: url("../images/tech/jira-tiny.png") no-repeat;
+      width: 58px;
+      height: 77px;
+      margin-left: -29px;
+      top: 592px;
    }
 }
 
